<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_size"
        android:layout_gravity="top|start"
        android:backgroundTint="@color/color_primary">

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_bookmark"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/header_size">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_spacing">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameTitle"
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/addressTitle"
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                app:layout_constraintTop_toBottomOf="@id/editName" />

            <LinearLayout
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/coordinates_space"
                app:layout_constraintTop_toBottomOf="@id/addressTitle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/coordinates_space"
                    android:text="@string/latitude"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="@dimen/common_spacing"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/coordinates_space"
                    android:text="@string/longitude"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_long"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descriptionTitle"
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                app:layout_constraintTop_toBottomOf="@id/address" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitle" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                app:layout_constraintTop_toBottomOf="@id/editDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/delete"
                app:layout_constraintTop_toBottomOf="@id/confirmButton" />

        </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>