<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@drawable/card_line"
        android:padding="@dimen/common_spacing">

        <ImageView
            android:id="@+id/image_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/image_padding"
            android:src="@drawable/pin_drop"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_pin" />


        <TextView
            android:id="@+id/bookmark_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/bookmark_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bookmark_menu"
            app:layout_constraintStart_toEndOf="@id/image_pin"
            app:layout_constraintTop_toTopOf="@id/image_pin"
            tools:text="@tools:sample/lorem[3]" />

        <LinearLayout
            android:id="@+id/bookmark_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/image_pin"
            app:layout_constraintStart_toEndOf="@id/image_pin"
            app:layout_constraintTop_toBottomOf="@id/bookmark_name"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/coordinates_space"
                android:text="@string/latitude" />

            <TextView
                android:id="@+id/address_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/coordinates_space"
                android:text="@string/longitude" />

            <TextView
                android:id="@+id/address_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/bookmark_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bookmark_name"
            app:srcCompat="@drawable/bookmark_menu"
            android:contentDescription="@string/bookmark_menu" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="image_pin, bookmark_address" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            app:layout_constraintTop_toBottomOf="@id/image_pin"
            tools:text="@tools:sample/lorem[30]" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>